--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MYSQL_USER="root"
-MYSQL_PASSWORD="root"
-MYSQL_SCHEMA="sandbox-docker-compose-mysql"
-LISTEN_PORT="8000"
+MYSQL_HOST=127.0.0.1
+MYSQL_USER=user
+MYSQL_PASSWORD=password
+MYSQL_SCHEMA=example
+LISTEN_PORT=:9000
